--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "Bacterial-Battle",
     "title": "Bacterial Battle",
     "description": "JavaScript fitness / evolution game",
-    "version": "0.1beta",
+    "version": "0.0.1",
     "homepage": "https://github.com/pajtai/Bacterial-Battle",
     "author": {
         "name": "Peter Ajtai",
