--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
         "grunt-clean": ">=0.3.0",
         "grunt-coffee": ">=0.0.6",
         "grunt-cp": ">=0.1.0",
-        "grunt-reload":">=0.2.0"
+        "grunt-reload":">=0.2.0",
+        "grunt-beautify":">=0.1.0"
     },
     "keywords": []
 }
