--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
         "grunt-coffee": ">=0.0.6",
         "grunt-cp": ">=0.1.0",
         "grunt-reload":">=0.2.0",
-        "grunt-beautify":">=0.1.0"
+        "grunt-beautify":">=0.1.0",
+        "grunt-docco":">=0.1.1",
+        "docco":">=0.4.0"
     },
     "keywords": []
 }
