--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
         "grunt-beautify":">=0.1.0",
         "grunt-docco":">=0.1.1",
         "docco":">=0.4.0",
-        "grunt-css":">=0.2.1"
+        "grunt-css":">=0.2.1",
+        "grunt-requirejs":">=0.2.13"
     },
     "keywords": []
 }
